# AI-Agents-Portfolio

./: .gitignore  README.md
1-LangGraph-Memory-Agent/: LangGraphOzet.md  README.md
1-LangGraph-Memory-Agent/src/: README.md  memory.py  orn.py  tools.py
2-LangGraph-Memory-Agent/: hafiza.sqlite  index.html  main.py
2-Multi-Agent-System/: .gitignore  Dockerfile  app.py
3-Multi-Agent-System/: README.md  index.html  main.py  requirements.txt
3-NEXUS-Autonomous-Enterprise/: README.md  main.py  requirements.txt
4-Context-Aware-RAG-Assistant/: README.md  requirements.txt
4-NEXUS-Autonomous-Enterprise/: README.md  manager.py
5-context-aware-rag-assistant/: .gitignore  5-context-aware-rag-assistant-README.md
6-AutoGen/: README.md  agent.py  main.py  memory.py  planner.py  tools.py
7-MCP/: README.md  api.py  database.py  hafiza.db  kod.py  supervisor_server.py
8-ReAct-Reflection/: Makale.md  README.md  react_reflection_agent.py
AI-Coding-Assistant/: .env.example  .gitignore  README.md  pyproject.toml
AI-Coding-Assistant/ai_assistant/: cli.py  commands.py  config.py  diff_utils.py  openai_client.py
AI-Coding-Assistant/ai_assistant/tools/: files.py  git.py  schema.py  shell.py
Agent lifecycle management/: .gitignore
DeepEval/: .gitignore  README.md  test_rag.py
Human-in-the-Loop (İnsan Onaylı) Ajan (LangGraph HITL)/: LangGraphHITL1.ipynb  LangGraph_HITL0.ipynb  README.md
LangSmith/: README.md  main.py
Local_AI_Agents-MCP/: README.md
self-corrective-rag-agent/: .gitignore  README.md  chains.py  graph.py  main.py  nodes.py  state.py  tools.py
(+63 files in other folders)
